Removal of tech-preview banner related less and markup Fixes https://github.com/openshift/origin-web-console/issues/2186

--- a/app/styles/_navbar-vertical.less
+++ b/app/styles/_navbar-vertical.less
@@ -36,9 +36,6 @@
     vertical-align: middle;
     width: 0;
   }
-  .layout-pf-fixed .tech-preview & {
-    top: @tech-preview-banner-height;
-  }
   .navbar-brand {
     padding: 0;
     @media(min-width: @screen-sm-min) {
